--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -9,7 +9,7 @@ ja:
         current_password: 現在のパスワード
         current_sign_in_at: 現在のログイン時刻
         current_sign_in_ip: 現在のログインIPアドレス
-        email: Eメール
+        email: メールアドレス
         encrypted_password: 暗号化パスワード
         failed_attempts: 失敗したログイン試行回数
         last_sign_in_at: 最終ログイン時刻
@@ -25,6 +25,24 @@ ja:
         unconfirmed_email: 未確認Eメール
         unlock_token: ロック解除用トークン
         updated_at: 更新日
+        nickname: ニックネーム
+      personal_righting:
+        lastname: 苗字
+        firstname: 名前
+        lastname_hiragana: 苗字 ひらがな
+        firstname_hiragana: 名前 ひらがな
+        birthday: 誕生日
+      delivery_address:
+        delivery_lastname: 苗字
+        delivery_firstname: 名前
+        delivery_lastname_hiragana: 苗字 ひらがな
+        delivery_firstname_hiragana: 名前 ひらがな
+        postal_code: 郵便番号
+        prefecture: 都道府県
+        city: 市区町村
+        address: 番地
+        room_number: 部屋番号
+        phone_number: 携帯番号
     models:
       user: ユーザ
   devise:
